[package]
name = "nu_plugin_lua"
version = "0.1.0"
edition = "2021"

[dependencies]
fnv = "1.0.7"
mlua = { version = "0.9.9", features = ["lua54", "vendored", "send"] }
nu-plugin = "0.99.1"
nu-protocol = { version = "0.99.1", features = ["plugin"] }
parking_lot = "0.12.3"
serde = { version = "1.0.213", features = ["derive"] }
typetag = "0.2.18"
uuid = { version = "1.11.0", features = ["v4", "serde"]}
