[package]
name = "nu_plugin_lua"
version = "0.1.0"
edition = "2021"

[dependencies]
extension-traits = "2.0.0"
fnv = "1.0.7"
mlua = { version = "0.9.9", features = ["lua54", "vendored", "send"] }
parking_lot = "0.12.3"
serde = { version = "1.0.213", features = ["derive"] }
typetag = "0.2.18"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
nu_plugin_helpers = { path = "nu_plugin_helpers" }
nu-protocol.workspace = true
nu-plugin.workspace = true

[workspace]
members = ["nu_plugin_helpers", "nu_plugin_helpers_derive"]

[workspace.dependencies]
nu-protocol = { version = "0.99.1", features = ["plugin"] }
nu-plugin = "0.99.1"
